--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolioV3</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./styles/index.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -12,9 +16,9 @@
         <h1>Ndubscodes</h1>
         <nav>
             <ul>
-                <li><a href='./index.html'>Home</a></li>
-                <li><a href='./projects.html'>Projects</a></li>
-                <li><a>About</a></li>
+                <a href='./index.html'><li>Home</li></a>
+                <a href="./pages/projects.html"><li>Projects</li></a>
+                <a><li>About</li></a>
             </ul>
         </nav>
     </main>
