responsive home page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -33,7 +33,16 @@
                 <h4 class="project-title">StarMemo</h4>                
                 <div class="description">Utilizes the web speech api's speech recognition to interact with an interface and save memos</div>
                 <div class="view-links">
-                    <a href="https://github.com/ndubs18/StarMemo"><img src="../assets/GitHub_Logo.png" alt=""/></a>
+                    <a href="https://github.com/ndubs18/StarMemo" target=""><img src="../assets/GitHub_Logo.png" alt=""/></a>
+                    <a href="https://star-memo.vercel.app" target="_blank">Visit</a>
+                </div>   
+            </div>
+            <div class="project">
+                <img src="../assets/Screenshot 2024-09-03 at 1.27.11 PM.png"/>
+                <h4 class="project-title">StarMemo</h4>                
+                <div class="description">Utilizes the web speech api's speech recognition to interact with an interface and save memos</div>
+                <div class="view-links">
+                    <a href="https://github.com/ndubs18/StarMemo" target=""><img src="../assets/GitHub_Logo.png" alt=""/></a>
                     <a href="https://star-memo.vercel.app" target="_blank">Visit</a>
                 </div>   
             </div>
