--- a/index.html
+++ b/index.html
@@ -9,19 +9,65 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+<script src="index.js"></script>
 </head>
 <body>
-
-    <main id="home">
+    <header id="home">
         <h1>Ndubscodes</h1>
         <nav>
             <ul>
                 <a href='./index.html'><li>Home</li></a>
-                <a href="./pages/projects.html"><li>Projects</li></a>
+                <a><li>Projects</li></a>
                 <a><li>About</li></a>
             </ul>
         </nav>
-    </main>
-    
+    </header>
+    <section id="projects">
+        <h1>Projects</h1>
+        <div id="project-showcase">
+            <div class="project">
+                <div class="project-img-container">
+                    <img src="../assets/Screenshot 2024-09-03 at 1.27.11 PM.png"/>
+                </div>
+                <div class="project-info-container">
+                    <h2 class="project-title"><b>TuneShift</b></h2>
+                    <div class="description">
+                    <p>Node.js, React, React Router</p>
+                    <p>Tranfer music bidirectionally between Spotify and Apple Music</p>
+                    </div>
+                    <div class="view-links">
+                        <a><img src="../assets/GitHub_Logo.png" alt=""/></a>
+                    </div> 
+                </div>             
+            </div>
+            <div class="project">
+                <div class="project-img-container">
+                <img src="../assets/Screenshot 2024-09-03 at 1.27.11 PM.png"/>
+                </div>
+                <div class="project-info-container">
+                    <h2 class="project-title"><b>StarMemo</b></h4>
+                    <div class="description">
+                    <p>Node.js, React, Web Speech Api</p>
+                    <p>Utilizes the web speech api's speech recognition to interact with an interface and save memos</p>
+                    </div>
+                    <div class="view-links">
+                        <a><img src="../assets/GitHub_Logo.png" alt=""/></a>
+                    </div> 
+                </div>             
+            </div>
+            <div class="project">
+                <div class="project-img-container">
+                <img src="../assets/Screenshot 2024-09-03 at 1.27.11 PM.png"/>
+                </div>
+                <div class="project-info-container">
+                    <h2 class="project-title"><b>Lorem</b></h2>
+                    <div class="description">Tranfer music bidirectionally between Spotify and Apple Music</div>
+                    <div class="view-links">
+                        <a><img src="../assets/GitHub_Logo.png" alt=""/></a>
+                    </div> 
+                </div>             
+            </div> 
+        </div>
+    </section>
 </body>
 </html>
