--- a/index.html
+++ b/index.html
@@ -16,18 +16,22 @@
         <h1>Ndubscodes</h1>
         <nav>
             <ul>
-                <a href='./index.html'><li>Home</li></a>
-                <a><li>Projects</li></a>
+                <a href='#home'><li>Home</li></a>
+                <a href='#projects'><li>Projects</li></a>
                 <a><li>About</li></a>
             </ul>
         </nav>
+        <div id="media-links">
+            <a><img src="./assets/linkedin-circle-svgrepo-com.svg"/></a>
+            <a><img src="./assets/github-circle-svgrepo-com.svg"/></a>
+        </div>
     </header>
     <section id="projects">
         <h1>Projects</h1>
         <div id="project-showcase">
             <div class="project">
                 <div class="project-img-container">
-                    <img src="../assets/Screenshot 2024-09-03 at 1.27.11 PM.png"/>
+                    <img src="assets/Screenshot 2024-09-03 at 1.27.11 PM.png"/>
                 </div>
                 <div class="project-info-container">
                     <h2 class="project-title"><b>TuneShift</b></h2>
@@ -36,13 +40,13 @@
                     <p>Tranfer music bidirectionally between Spotify and Apple Music</p>
                     </div>
                     <div class="view-links">
-                        <a><img src="../assets/GitHub_Logo.png" alt=""/></a>
+                        <a><img src="assets/GitHub_Logo.png" alt=""/></a>
                     </div> 
                 </div>             
             </div>
             <div class="project">
                 <div class="project-img-container">
-                <img src="../assets/Screenshot 2024-09-03 at 1.27.11 PM.png"/>
+                <img src="assets/Screenshot 2024-09-03 at 1.27.11 PM.png"/>
                 </div>
                 <div class="project-info-container">
                     <h2 class="project-title"><b>StarMemo</b></h4>
@@ -51,7 +55,7 @@
                     <p>Utilizes the web speech api's speech recognition to interact with an interface and save memos</p>
                     </div>
                     <div class="view-links">
-                        <a><img src="../assets/GitHub_Logo.png" alt=""/></a>
+                        <a><img src="assets/GitHub_Logo.png" alt=""/></a>
                     </div> 
                 </div>             
             </div>
