--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="./styles/index.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-<script src="index.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <script src="index.js"></script>
 </head>
 <body>
     <header id="home">
+        <div id="video-overlay"></div>
+        <video loop="loop" autoplay="autoplay" playsinline muted="muted" src="./assets/16296848-uhd_3840_2160_24fps.mp4"></video>
         <h1>Ndubscodes</h1>
         <nav>
             <ul>
@@ -22,9 +24,10 @@
             </ul>
         </nav>
         <div id="media-links">
-            <a><img src="./assets/linkedin-circle-svgrepo-com.svg"/></a>
-            <a><img src="./assets/github-circle-svgrepo-com.svg"/></a>
+            <a href="https://www.linkedin.com/in/nick-winkler-34580872/" target="_blank"><img src="./assets/linkedin-circle-svgrepo-com.svg"/></a>
+            <a href="https://github.com/ndubs18" target="_blank"><img src="./assets/github-circle-svgrepo-com.svg"/></a>
         </div>
+
     </header>
     <section id="projects">
         <h1>Projects</h1>
