added scroll transition for media links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
 </head>
 <body>
     <header id="home">
@@ -24,8 +24,8 @@
             </ul>
         </nav>
         <div id="media-links">
-            <a href="https://www.linkedin.com/in/nick-winkler-34580872/" target="_blank"><img src="./assets/linkedin-circle-svgrepo-com.svg"/></a>
-            <a href="https://github.com/ndubs18" target="_blank"><img src="./assets/github-circle-svgrepo-com.svg"/></a>
+            <a href="https://www.linkedin.com/in/nick-winkler-34580872/" target="_blank"><img id="linkedin-logo" src="./assets/linkedin-circle-svgrepo-com.svg"/></a>
+            <a href="https://github.com/ndubs18" target="_blank"><img id="github-logo" src="./assets/github-circle-svgrepo-com.svg"/></a>
         </div>
 
     </header>
