added infinite icon carousel

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             src="./assets/16296848-uhd_3840_2160_24fps.mp4"></video>
         -->
         <nav>
-            <h1>Nick Winkler</h1>
+            <img id="ndubsCodesImg" src="./assets/ndubsCodes.svg" />
             <ul>
                 <a href='#home'>
                     <li>Home</li>
@@ -34,7 +34,6 @@
                 </a>
             </ul>
 
-            <span></span>
         </nav>
     </header>
     <section id="bio">
@@ -78,6 +77,20 @@
                 <p>Kind, Minikube, Bash</p>
             </div>
         </div>
+        <div id="scroller">
+            <div class="imageList scrollerInner">
+                <img src="./assets/git-logo.png" />
+                <img src="./assets/nodejs-logo.svg" />
+                <img src="./assets/js-logo-244.png" />
+                <img src="./assets/ts-logo-256.png" />
+                <img src="./assets/java-logo-144.png" />
+                <img src="./assets/react-logo-128.png" />
+                <img src="./assets/neovimio-icon.svg" />
+                <img src="./assets/html-logo-144.png" />
+                <img src="./assets/css-logo-144.png" />
+                <img src="./assets/spring-logo-144.png" />
+            </div>
+        </div>
     </section>
     <section id="experience">
         <h1>Experience</h1>
@@ -111,6 +124,9 @@
             </div>
 
         </div>
+    </section>
+    <section id="education">
+        <h1>Education</h1>
     </section>
 </body>
 
