added projects and animations

--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
                 <a href='#projects'>
                     <li>Projects</li>
                 </a>
-                <a>
-                    <li>About</li>
-                </a>
             </ul>
 
         </nav>
@@ -114,20 +111,49 @@
     </section>
     <section id="projects">
         <h1>Projects</h1>
-        <div id="project-showcase">
-            <div class="project">
-
+        <div class="project" id="tuneshift">
+            <img src="./assets/tuneshift.jpg">
+            <div class="cover"></div>
+            <div class="info">
+                <h3>TuneShift</h3>
+                <div class="techStack">
+                    <span>TypeScript</span>
+                    <span>React.js</span>
+                    <span>Node.js</span>
+                    <span>OAuth2</span>
+                </div>
+                <div class="description">
+                    <p>Transfer music between Spotify and Apple Music </p>
+                </div>
+                <div class="projLinks">
+                    <div class="visit">Visit<img class="rightArrow" src="./assets/right-arrow.png" /></div>
+                    <div class="learnMore">Learn More <img src="./assets/github-circle-svgrepo-com.svg" /> </div>
+                </div>
             </div>
+        </div>
+        <div class="project">
+            <img src="./assets/starMemo.png">
+            <div class="cover"></div>
+            <div class="info">
+                <h3>StarMemo</h3>
+                <div class="techStack">
+                    <span>TypeScript</span>
+                    <span>React.js</span>
+                    <span>Node.js</span>
+                    <span>Web Speech</span>
+                </div>
+                <div class="description">
+                    <p>Voice first app for managing memos</p>
+                </div>
 
-            <div class="project">
-
+                <div class="projLinks">
+                    <div class="visit">Visit <img class="rightArrow" src="./assets/right-arrow.png" /></div>
+                    <div class="learnMore">Learn More <img src="./assets/github-circle-svgrepo-com.svg"></div>
+                </div>
             </div>
-
         </div>
     </section>
-    <section id="education">
-        <h1>Education</h1>
-    </section>
+    <footer>&copy Nick Winkler</footer>
 </body>
 
 </html>
