added anchor tags for project links

--- a/index.html
+++ b/index.html
@@ -126,8 +126,12 @@
                     <p>Transfer music between Spotify and Apple Music </p>
                 </div>
                 <div class="projLinks">
-                    <div class="visit">Visit<img class="rightArrow" src="./assets/right-arrow.png" /></div>
-                    <div class="learnMore">Learn More <img src="./assets/github-circle-svgrepo-com.svg" /> </div>
+                    <a href="https://tuneshift.onrender.com/" target="_blank">
+                        <div class="visit">Visit<img class="rightArrow" src="./assets/right-arrow.png" /></div>
+                    </a>
+                    <a href="https://github.com/ndubs18/tuneshift" target="_blank">
+                        <div class="learnMore">Learn More <img src="./assets/github-circle-svgrepo-com.svg" /> </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -147,8 +151,11 @@
                 </div>
 
                 <div class="projLinks">
+                    <a href="https://https://star-memo.vercel.app" target="_blank" />
                     <div class="visit">Visit <img class="rightArrow" src="./assets/right-arrow.png" /></div>
-                    <div class="learnMore">Learn More <img src="./assets/github-circle-svgrepo-com.svg"></div>
+                    <a href="https://github.com/ndubs18/StarMemo" target="_blank">
+                        <div class="learnMore">Learn More <img src="./assets/github-circle-svgrepo-com.svg"></div>
+                    </a>
                 </div>
             </div>
         </div>
