--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </div>
 
                 <div class="projLinks">
-                    <a href="https://https://star-memo.vercel.app" target="_blank" />
+                    <a href="https://star-memo.vercel.app" target="_blank" />
                     <div class="visit">Visit <img class="rightArrow" src="./assets/right-arrow.png" /></div>
                     <a href="https://github.com/ndubs18/StarMemo" target="_blank">
                         <div class="learnMore">Learn More <img src="./assets/github-circle-svgrepo-com.svg"></div>
