--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                 <p class="role">Software Engineer</p>
                 <p class="jobDate">December 2024 - Current</p>
             </div>
-            -->
+-->
             <div class="job">
                 <h2 class="company">Apple</h2>
-                <p class="role">Software Engineer Intern</p>
+                <p class="role">Software Developer</p>
                 <p class="jobDate">January 2024 - June 2024</p>
             </div>
             <div class="job">
