--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolioV3</title>
+    <title>ndubscodes</title>
     <link rel="stylesheet" href="./styles/index.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
