--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 -->
             <div class="job">
                 <h2 class="company">Apple</h2>
-                <p class="role">Software Developer</p>
+                <p class="role">Software Developer <i>Intern</i></p>
                 <p class="jobDate">January 2024 - June 2024</p>
             </div>
             <div class="job">
