added new job and changed timeline styling

--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
                 <p class="jobDate">January 2024 - June 2024</p>
             </div>
             <div class="job">
+                <h2 class="company">Lang2Views</h2>
+                <p class="role">Software Engineer</p>
+                <p class="jobDate">January 2024 - June 2024</p>
+            </div>
+            <div class="job">
                 <h2 class="company">Providence Health</h2>
                 <p class="role">IS Support Technician</p>
                 <p class="jobDate">July 2020 - October 2020</p>
