added new project

--- a/index.html
+++ b/index.html
@@ -166,6 +166,29 @@
                 </div>
             </div>
         </div>
+        <div class="project">
+            <img src="./assets/cd-bbq.png">
+            <div class="cover"></div>
+            <div class="info">
+                <h3>C & D Barbeque</h3>
+                <div class="techStack">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JavaScript</span>
+                </div>
+                <div class="description">
+                    <p>Static website I made for a restaurant in Portland, Oregon</p>
+                </div>
+
+                <div class="projLinks">
+                    <a href="https://cdbarbeque.com" target="_blank" />
+                    <div class="visit">Visit <img class="rightArrow" src="./assets/right-arrow.png" /></div>
+                    <a href="https://github.com/ndubs18/cd-barbeque" target="_blank">
+                        <div class="learnMore">Learn More <img src="./assets/github-circle-svgrepo-com.svg"></div>
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
     <footer>&copy Nick Winkler</footer>
 </body>
