--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
         <p id="location"><img id="locationPin" src="./assets/location-pin.png" /><i>San Diego, California</i></p>
-        <p>Software Engineer with 5 years of experience</p>
+        <p>Software Engineer</p>
     </section>
     <section id="tech">
         <h1>Technologies</h1>
