changed project image and tech

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <section id="projects">
         <h1>Projects</h1>
         <div class="project" id="tuneshift">
-            <img src="./assets/tuneshift.jpg">
+            <img src="./assets/tuneshift.png">
             <div class="cover"></div>
             <div class="info">
                 <h3>TuneShift</h3>
@@ -127,7 +127,7 @@
                     <span>TypeScript</span>
                     <span>React.js</span>
                     <span>Node.js</span>
-                    <span>OAuth2</span>
+                    <span>OAuth</span>
                 </div>
                 <div class="description">
                     <p>Transfer music between Spotify and Apple Music </p>
