changed project stack item

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <span>TypeScript</span>
                     <span>React.js</span>
                     <span>Node.js</span>
-                    <span>Web Speech</span>
+                    <span>Web Speech APIs</span>
                 </div>
                 <div class="description">
                     <p>Voice first app for managing memos</p>
