changed backend tech

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div id="backend">
                 <h3>Backend</h3>
-                <p>Node.js, MySQL, MongoDB, Oracle</p>
+                <p>Node.js, MySQL, Oracle</p>
             </div>
             <div id="vControl">
                 <h3>Version Control</h3>
