tech section changed

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div id="categories">
             <div id="languages">
                 <h3>Languages</h3>
-                <p>JavaScript, TypeScript, Java, HTML, CSS</p>
+                <p>JavaScript, TypeScript, Java, SQL, HTML, CSS</p>
             </div>
             <div id="frameworksAndLibraries">
                 <h3>Frameworks &amp Libraries</h3>
@@ -59,7 +59,7 @@
             </div>
             <div id="backend">
                 <h3>Backend</h3>
-                <p>Node.js, MySQL, Oracle</p>
+                <p>Node.js, Postgres, MongoDB, Oracle</p>
             </div>
             <div id="vControl">
                 <h3>Version Control</h3>
